# birdnet-collage-eink

./: .env.example  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml  requirements.txt  spec.md
deploy/: birdnet-eink.service  deploy.sh  install.sh
src/: buttons.py  diagnostics.py  fetcher.py  main.py
src/display/: __init__.py  base.py  inky_impression.py  simulator.py
tests/: conftest.py  test_buttons.py  test_diagnostics.py  test_display_simulator.py  test_fetcher.py  test_main.py
